--- a/frontend/src/styles/sections/_stakes.scss
+++ b/frontend/src/styles/sections/_stakes.scss
@@ -8,6 +8,7 @@
     }
   }
   .legend{
+    position: relative;
     margin-top: 15px;
     padding-bottom: 20px;
     font-size: 12px;
@@ -23,5 +24,76 @@
     @include breakpoint('phablet', max) {
       flex-wrap: wrap;
     }
+  }
+
+  .stake-switch-container {
+    position: absolute;
+    display: inline-block;
+    line-height: 36px;
+    font-size: 20px;
+    right: 10px;
+    bottom: 20px;
+  }
+  .stake-switch {
+    position: relative;
+    display: inline-block;
+    margin-left: 10px;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .stake-switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    // height: 50px;
+    // width: 100px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($color-blue, 0.5);
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('/images/icons/theta-icon@2x.png');
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+  }
+
+  input:checked + .slider {
+    background-color: rgba($color-orange, 0.5);
+  }
+
+  input:checked + .slider::before {
+    background-image: url('/images/icons/tfuel-icon@2x.png');;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
   }
 }
