--- a/frontend/src/styles/components/_stakes-table.scss
+++ b/frontend/src/styles/components/_stakes-table.scss
@@ -7,9 +7,12 @@
 .stakes{
   width: 100%;
   text-align: center;
+  table.data tbody td, table.data thead th {
+    padding: .75rem .5rem;
+  }
   .node-type{
     color: $color-font-light;
-    width: 115px;
+    width: 95px;
     &:before {
       content: '';
       display: inline-block;
@@ -40,7 +43,7 @@
   .arrow-container{
     cursor: pointer;
     color: $color-theta-blue-light;
-    padding: 0;
+    padding: 0 !important;
     text-align: center !important;
     i {
       border: solid $color-font-light;
