Add token transferred row and fix topic section

--- a/frontend/src/styles/partials/_utils.scss
+++ b/frontend/src/styles/partials/_utils.scss
@@ -22,6 +22,9 @@
 .text-grey {
   color: $color-font-light;
 }
+.text-white {
+  color: $color-font-main;
+}
 
 @mixin flex($direction: row, $justify: flex-start, $align: center, $wrap: nowrap) {
   display: flex;
