Add link to TNT-721 smart contract page

--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -246,8 +246,11 @@
     margin-left: 10px;
     color: white
   }
-  & .text-tnt-20{
+  & .text-container{
     margin-left: 10px;
+    & .token-link{
+      margin: 0;
+    }
   }
 }
 
