Add item section in tokenId page

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -35,5 +35,6 @@
 @import 'sections/account';
 @import 'sections/blocks';
 @import 'sections/stakes';
+@import 'sections/token';
 
 @import '../../node_modules/react-tabs/style/react-tabs.scss';
