--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -14,6 +14,7 @@
 @import 'partials/misc-ui';
 
 // COMPONENTS
+@import 'components/accordion';
 @import 'components/header';
 @import 'components/not-exist';
 @import 'components/pagination';
