Reduce duplicate smart contract calls

--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -301,6 +301,9 @@
       content: '\25CF';
       padding-right: 10px;
     }
+    & .token-link {
+      margin: 0 10px;
+    }
     & a {
       margin: 0;
     }
