Update token icon

--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -31,8 +31,7 @@
   }
   &.tbill {
     &:before {
-      width: 35px;
-      background-image: url('/images/icons/tbill_token.svg'); 
+      background-image: url('/images/icons/tbill_token.png'); 
     }
   }
 }
