Add TNS name in tooltip

--- a/frontend/src/styles/components/_transaction-table.scss
+++ b/frontend/src/styles/components/_transaction-table.scss
@@ -67,6 +67,9 @@ table.data.txn-table {
             border-color: #000000 transparent transparent transparent;
             border-width: 5px;
           }
+          & p {
+            margin: 0;
+          }
         }
         &:hover .tooltip--text {
           visibility: visible;
