--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -96,6 +96,9 @@
             border-color: #000000 transparent transparent transparent;
             border-width: 5px;
           }
+          & p {
+            margin: 0;
+          }
         }
         &:hover .tooltip--text {
           visibility: visible;
