Add aura token icon

--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -34,6 +34,9 @@
       background-image: url('/images/icons/tbill_token.png'); 
     }
   }
+  &.aura {
+    &:before { background-image: url('/images/icons/aura_token.png'); }
+  }
 }
 
 .currency-link {
