--- a/frontend/src/styles/sections/_stakes.scss
+++ b/frontend/src/styles/sections/_stakes.scss
@@ -1,11 +1,7 @@
 .content.stakes{
   .chart{
-    width: 30%;
-    margin: 0 35%;
-    @include breakpoint('tablet-wide', max) {
-      width: 50%;
-      margin: 0 25%;
-    }
+    min-height: 165px;
+    height: 20vh;
   }
   .legend{
     position: relative;
