--- a/frontend/src/styles/modules/_colors.scss
+++ b/frontend/src/styles/modules/_colors.scss
@@ -5,6 +5,7 @@ $color-theta-blue-light: #25C4E4;
 
 // basic colors
 $color-white: #fff;
+$color-dark-black: #15151A;
 $color-black: #1B1F2A;
 $color-blue: $color-theta-blue;
 $color-green: $color-theta-green;
