--- a/frontend/src/styles/components/_dashboard-row.scss
+++ b/frontend/src/styles/components/_dashboard-row.scss
@@ -11,14 +11,18 @@
   cursor: default;
 
   &.theta > :first-child {
-    width: 4%;
+    width: 3.2%;
   }
   &.tfuel > :first-child {
-    width: 4%;
+    width: 3.2%;
   }
   &.theta .detail {
     .value.price {
       color: $color-blue;
+
+      &::selection {
+        -webkit-text-fill-color: $color-white;
+      }
       /* ----------- Laptops and Desktops ----------- */
       @media only screen and (min-width: 1224px) {
         @include linearHorizontalGradient($color-blue, $color-green);
@@ -30,6 +34,10 @@
   &.tfuel .detail {
     .value.price {
       color: rgb(237, 109, 49);
+
+      &::selection {
+        -webkit-text-fill-color: $color-white;
+      }
       /* ----------- Laptops and Desktops ----------- */
       @media only screen and (min-width: 1224px) {
         @include linearHorizontalGradient($color-red, $color-orange);
@@ -122,7 +130,7 @@
               margin-left: 5px;
             }
             &:after {
-              content: '';
+              content: "";
               position: absolute;
               border-style: solid;
               top: 100%;
@@ -182,7 +190,7 @@
         .title {
           margin-left: 20px;
 
-          @include breakpoint('phablet', max) {
+          @include breakpoint("phablet", max) {
             margin-left: 0;
           }
         }
@@ -193,7 +201,7 @@
       }
     }
   }
-  @include breakpoint('phablet', max) {
+  @include breakpoint("phablet", max) {
     margin: 0 5%;
     flex-wrap: wrap;
     &.half {
