Implement chain bar

--- a/frontend/src/styles/modules/_colors.scss
+++ b/frontend/src/styles/modules/_colors.scss
@@ -1,6 +1,6 @@
 // brand colors
-$color-theta-green: #21EDBA;
-$color-theta-blue: #29B3EB;
+$color-theta-green: #20E3B2;
+$color-theta-blue: #27A7DB;
 $color-theta-blue-light: #25C4E4;
 
 // basic colors
