--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -94,10 +94,10 @@
     height: 100%;
 
     &__button {
-      width: 290px;
+      width: 250px;
       height: 34px;
       color: $color-blue;
-      border: 1px solid rgba($color-blue, .75);
+      border: 1px solid rgba($color-blue, 0.75);
       border-radius: 6px;
       font-size: 14px;
       display: flex;
@@ -118,72 +118,6 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-color: transparent;
-    }
-  }
-
-  .nav-search {
-    display: flex;
-    align-items: center;
-    color: $color-font-body;
-
-    .search-input {
-      width: 16rem;
-    }
-
-    .search-select {
-      width: 7rem;
-      margin: 0 10px;
-
-      &::after {
-        content: "";
-        width: 0;
-        height: 0;
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;
-        border-top: 6px solid $color-input-text;
-        position: absolute;
-        right: 5px;
-        top: 12px;
-        pointer-events: none;
-      }
-
-      select {
-        height: 32px;
-        width: 100%;
-        display: inline-block;
-      }
-    }
-
-    .search-button {
-      height: 30px;
-      width: 20px;
-      border-radius: 0.25rem 0.25rem 0.25rem 0.25rem;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      // @include linearVerticalGradient($th-blue, $th-green);
-
-      &:hover {
-        @include linearVerticalGradient($color-blue, $color-green);
-      }
-    }
-
-    .svg-icon {
-      width: 80%;
-      height: 80%;
-      display: block;
-      margin: auto;
-    }
-
-    .svg-icon path,
-    .svg-icon polygon,
-    .svg-icon rect {
-      fill: $color-white;
-    }
-
-    .svg-icon circle {
-      stroke: $color-white;
-      stroke-width: 1;
     }
   }
 
@@ -238,6 +172,142 @@
     .nav a.nav-item {
       font-size: 0.8rem;
       line-height: 0.8rem;
+    }
+  }
+}
+
+.chain-header-wrap {
+  background-color: rgba($color-blue, 0.25);
+  width: 100%;
+  &.theta {
+    background: linear-gradient(
+      90deg,
+      rgba($color-blue, 0.25),
+      rgba($color-green, 0.25)
+    );
+  }
+}
+.chain-header {
+  @include row($justify: space-between, $align: flex-start);
+  max-width: 1100px;
+  width: 100%;
+  height: 50px;
+  margin: 0 auto 0;
+  padding: 9px 0;
+  color: $color-font-light;
+
+  &__name {
+    color: $color-theta-blue-light;
+    letter-spacing: 2.25px;
+    font-size: 15px;
+    font-weight: $weight-bold;
+    line-height: 32px;
+    padding-left: 7px;
+  }
+  &__navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    a.nav-item {
+      font-family: $font-title;
+      font-weight: $weight-bold;
+      padding: 0.65rem;
+      margin-right: 7px;
+
+      color: $color-white;
+      font-size: 11px;
+      line-height: 11px;
+      letter-spacing: 2.75px;
+
+      background: $color-white;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      position: relative;
+      white-space: nowrap;
+      overflow: hidden;
+
+      &::selection {
+        -webkit-text-fill-color: $color-white;
+      }
+      
+      &:hover {
+        @include linearHorizontalGradient($color-blue, $color-green);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+    }
+
+    .nav-search {
+      display: flex;
+      align-items: center;
+      color: $color-font-body;
+      margin-left: 20px;
+
+      .search-input {
+        width: 330px;
+        color: $color-light;
+        background-color: $color-white;
+        border-radius: 6px 0 0 6px;
+        padding-left: 15px;
+        
+        &::placeholder {
+          color: $color-light;
+        }
+      }
+
+      .search-select {
+        width: 7rem;
+        margin: 0 10px;
+
+        &::after {
+          content: "";
+          width: 0;
+          height: 0;
+          border-left: 5px solid transparent;
+          border-right: 5px solid transparent;
+          border-top: 6px solid $color-input-text;
+          position: absolute;
+          right: 5px;
+          top: 12px;
+          pointer-events: none;
+        }
+
+        select {
+          height: 32px;
+          width: 100%;
+          display: inline-block;
+        }
+      }
+
+      .search-button {
+        height: 32px;
+        // width: 25px;
+        border-radius: 0 6px 6px 0;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        background-color: $color-white;
+        padding: 0 12px;
+      }
+
+      .svg-icon {
+        width: 16px;
+        height: 24px;
+        display: block;
+        margin: auto;
+      }
+
+      .svg-icon path,
+      .svg-icon polygon,
+      .svg-icon rect {
+        fill: $color-light;
+      }
+
+      .svg-icon circle {
+        stroke: $color-light;
+        stroke-width: 1;
+      }
     }
   }
 }
