--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -29,6 +29,7 @@
 @import 'components/tabs';
 @import 'components/read-contract';
 @import 'components/smart-contract';
+@import 'components/dapp-card';
 
 // SECTIONS 
 @import 'sections/home';
