--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -41,6 +41,38 @@
     }
   }
 
+  .dapps {
+    width: 100%;
+
+    &__title {
+      font-weight: $weight-bold;
+      font-size: 16px;
+      text-align: center;
+      letter-spacing: 4px;
+      margin-top: 38px;
+    }
+
+    &__container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 30px;
+    }
+
+    &__footer {
+      display: flex;
+      justify-content: center;
+      
+      .more {
+        margin-top: 27px;
+        font-size: 14px;
+        font-weight: bold;
+        letter-spacing: 1.4px;
+        color: $color-theta-blue-light;
+      }
+    }
+  }
+
   @include breakpoint("tablet", max) {
     > :first-child {
       margin-top: 5%;
