--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -30,6 +30,7 @@
 @import 'components/read-contract';
 @import 'components/smart-contract';
 @import 'components/dapp-card';
+@import 'components/chain-card';
 
 // SECTIONS 
 @import 'sections/home';
