--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -50,6 +50,7 @@
       text-align: center;
       letter-spacing: 4px;
       margin-top: 38px;
+      text-transform: uppercase;
     }
 
     &__container {
