--- a/frontend/src/styles/components/_dashboard-row.scss
+++ b/frontend/src/styles/components/_dashboard-row.scss
@@ -177,6 +177,11 @@
           width: 100%;
           height: 85%;
           margin: 10px 0;
+
+          @include breakpoint("phablet", max) {
+            height: 50%;
+            margin: 10px 0 0 -15%;
+          }
           // margin: 5% 0 0 25%;
         }
       }
