--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -55,6 +55,12 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
+
+      @include breakpoint("phablet", max) {
+        font-size: 10px;
+        letter-spacing: 0;
+        padding: 9px 2px;
+      }
     }
   }
 
@@ -86,6 +92,12 @@
         &.discord {
           background-image: url("/images/icons/icon_discord.png");
         }
+      }
+    }
+    @include breakpoint("phablet", max) {
+      margin-left: 10px;
+      &__link {
+        margin-right: 5px;
       }
     }
   }
@@ -122,6 +134,9 @@
   }
 
   @include breakpoint("tablet-wide", max) {
+    .nav-select {
+      display: none;
+    }
     .nav-search .search-input {
       width: 10rem;
     }
@@ -346,6 +361,14 @@
         stroke: $color-light;
         stroke-width: 1;
       }
+    }
+  }
+
+  @include breakpoint("phablet", max) {
+    height: 100px;
+    flex-direction: column;
+    .nav-search {
+      display: none;
     }
   }
 }
