--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -31,6 +31,7 @@
 @import 'components/smart-contract';
 @import 'components/dapp-card';
 @import 'components/chain-card';
+@import 'components/subchain_chart';
 
 // SECTIONS 
 @import 'sections/home';
