--- a/frontend/src/styles/components/_tabs.scss
+++ b/frontend/src/styles/components/_tabs.scss
@@ -8,6 +8,9 @@
       &--disabled{
         cursor: not-allowed;
       }
+      &:focus::after {
+        background-color: transparent;
+      }
     }
 
     &__tab-list{
